--- a/website_fylo/css-index/email.css
+++ b/website_fylo/css-index/email.css
@@ -13,6 +13,7 @@
     box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.254274);
     border-radius: 9px;
     transform: translateY(170px);
+    position: absolute;
 }
 
 #email > h1{
