--- a/website_loop-studio/css-index/global.css
+++ b/website_loop-studio/css-index/global.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 
+body {
+    background-color: #f2f2f2;
+    margin: 0;
+    padding: 0;
+}
+
 * {
     margin: 0;
     padding: 0;
