--- a/website_loop-studio/css-index/main.css
+++ b/website_loop-studio/css-index/main.css
@@ -1,26 +1,37 @@
 main {
     display: flex;
-    flex-direction: row;
+    justify-content: flex-end;
+    margin-top: 89px;
     background: #F2F2F2;
-    height: 784px;
+    height: 550px;
     width: 100%;
+}
+
+#centermain{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 1216px;
+    height: 500px;
 }
 
 #textmain{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 541px;
-    height: 317px;
+    width: 480px;
+    height: 200px;
     background-color: #F2F2F2;
-    transform: translate(-150px, 270px);
     padding: 40px 40px;
+    z-index: 2;
+    left: -180px;
+    bottom: -132px;
+    position: relative;
 }
 
 #textmain > h1{
-    display: flex;
-    flex-direction: column;
-    width: 445px;
+    width: 420px;
     height: 96px;
     font-family: 'Josefin Sans';
     font-style: normal;
@@ -38,12 +49,4 @@ main {
     color: #000000;
     mix-blend-mode: normal;
     opacity: 0.5;
-}
-
-#container {
-    display: flex;
-    flex-direction: row;
-    padding: 40px 40px;
-    margin-top: 60px;
-    margin-left: 50px;
 }
