--- a/website_loop-studio/css-index/main.css
+++ b/website_loop-studio/css-index/main.css
@@ -1,6 +1,6 @@
 main {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin-top: 89px;
     background: #F2F2F2;
     height: 550px;
@@ -14,6 +14,7 @@ main {
     position: relative;
     width: 1216px;
     height: 500px;
+    right: -120px;
 }
 
 #textmain{
