--- a/website_loop-studio/css-index/cards.css
+++ b/website_loop-studio/css-index/cards.css
@@ -3,3 +3,26 @@
     height: 450px;
     background-image: url(../images-index/image-deep-earth.jpg);
 }
+
+.backgroundcard{
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.601863) 100%); 
+    width: 100%;
+    height: 320px;
+    margin-top: 130px;
+}
+.backgroundcard > h1{
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 32px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    height: 64px;
+    width: 190px;
+    transform: translate(30px, 215px);
+}
+
+#containerstartcard{
+    display: flex;
+    justify-content: center;
+}
