--- a/website_loop-studio/css-index/cards.css
+++ b/website_loop-studio/css-index/cards.css
@@ -1,14 +1,12 @@
 .card{
     width: 256px;
     height: 450px;
-    background-image: url(../images-index/image-deep-earth.jpg);
 }
 
 .backgroundcard{
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.601863) 100%); 
     width: 100%;
-    height: 320px;
-    margin-top: 130px;
+    height: 100%;
 }
 .backgroundcard > h1{
     font-family: 'Josefin Sans';
@@ -19,7 +17,14 @@
     color: #FFFFFF;
     height: 64px;
     width: 190px;
-    transform: translate(30px, 215px);
+    transform: translate(30px, 355px);
+}
+
+.backgroundcard:hover{
+    background: rgba(255, 255, 255, 0.75071);
+}
+.backgroundcard:hover h1{
+    color: #000000;
 }
 
 #containerstartcard{
