--- a/website_loop-studio/css-index/footer.css
+++ b/website_loop-studio/css-index/footer.css
@@ -1,5 +1,57 @@
 footer{
-    width: 1430px;
-    height: 351px;
-    background-color: #F2F2F2;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 140px;
+    background-color: #000000;
+}
+
+#footerstart{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 140px;
+    gap: 1.2rem;
+}
+
+.alignlist{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.alignlist li a{
+    font-family: 'Alata';
+    font-style: normal;
+    font-weight: 400;
+    text-decoration: none;
+    font-size: 15px;
+    color: #FFFFFF;
+}
+
+.alignlist ul li a{
+    text-decoration: none;
+}
+
+#centerfooter{
+    display: flex;
+    flex-direction: row;
+}
+
+#finalfooter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
+
+#finalfooter > p{
+    font-family: 'Alata';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    color: #FFFFFF;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    transform: translateX(-121px);
 }
