--- a/website_loop-studio/css-index/global.css
+++ b/website_loop-studio/css-index/global.css
@@ -2,9 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 
 body {
-    background-color: #f2f2f2;
-    margin: 0;
-    padding: 0;
+    background-color: #F2F2F2;
 }
 
 * {
