--- a/website_skilled/css-index/global.css
+++ b/website_skilled/css-index/global.css
@@ -5,3 +5,15 @@ body {
     padding: 0;
     margin: 0;
 }
+
+@media (max-width: 600px){
+    #containertext {
+        margin-left: 80px;
+        width: 100%;
+    }
+
+    section{
+        flex-wrap: wrap
+    }
+
+}
