--- a/website_easybank/css/global.css
+++ b/website_easybank/css/global.css
@@ -29,3 +29,9 @@ button {
     border-style: solid;
     cursor: pointer;
     }
+
+@media (max-width: 600px){
+    main {
+        overflow: hidden;
+    }
+}
