--- a/website_easybank/css/home.css
+++ b/website_easybank/css/home.css
@@ -1,6 +1,7 @@
 @import "/css/global.css";
 @import "/css/components/header.css";
 @import "/css/components/invite-button.css";
+@import "/css/components/footer.css";
 
 /* Section */
 
