--- a/website_easybank/css/global.css
+++ b/website_easybank/css/global.css
@@ -57,6 +57,10 @@ button {
         overflow: hidden;
     }
 
+    header{
+        margin-left: 5px;
+    }
+
     .text-wrap{
         margin-left: 20px;
     }
